--- a/third/templates/third/list.html
+++ b/third/templates/third/list.html
@@ -8,28 +8,32 @@
             <div class="card border-secondary">
                 <div class="card-body">
                     <h5 class="card-title">{{ item.name }}</h5>
-                    <h6 class="card-submit mb-2 text-muted">{{ item.address }}</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">{{ item.address }}</h6>
+                    <p class="card-text">리뷰: {{ item.reviews_count }}개, 평점: {{ item.average_point }}점</p>
                     <p class="card-text">음식점 설명</p>
-                    <a href="{% url 'restaurant-detail' id=item.id%}" class="card-link">자세히 보기</a>
+                    <a href="{% url 'restaurant-detail' id=item.id %}" class="card-link">자세히 보기</a>
                     <a href="{% url 'restaurant-update' %}?id={{ item.id }}" class="card-link">수정하기</a>
                 </div>
             </div>
         </div>
     </div>
     {% endfor %}
+
     <div class="row">
-        <div class="col-sm-12 text-center"> <!-- 수정된 부분 -->
-            <div class="pagination-center">
+        <div class="col-sm-12 text-center">
+            <div class="pagination">
                 <span class="step-links text-center" style="width:100%;">
                     {% if restaurants.has_previous %}
                         <a href="?page=1">&laquo;</a>
                         <a href="?page={{ restaurants.previous_page_number }}">{{ restaurants.previous_page_number }}</a>
                     {% endif %}
+
                     <span class="current">
                         {{ restaurants.number }}
                     </span>
+
                     {% if restaurants.has_next %}
-                        <a href="?page={{ restaurants.next_page_number}}">{{ restaurants.next_page_number }}</a>
+                        <a href="?page={{ restaurants.next_page_number }}">{{ restaurants.next_page_number }}</a>
                         ...
                         <a href="?page={{ restaurants.paginator.num_pages }}">{{ restaurants.paginator.num_pages }}</a>
                     {% endif %}
