--- a/third/templates/third/review_create.html
+++ b/third/templates/third/review_create.html
@@ -1,16 +1,13 @@
 {% extends 'third/base.html' %}
 {% load static %}
 {% block content %}
-<!DOCTYPE html>
 <div class="container">
-    <form action="{% url 'review-create' restaurant_id=item.id %}" method="post" style="margin-top:20px;">
+    <form action="{% url 'review-create' restaurant_id=item.id %}" method="post">
         {% csrf_token %}
         <table>
             {{ form.as_table }}
-  </table>
+        </table>
         <button type="submit">등록</button>
     </form>
 </div>
 {% endblock %}
-</html>
-
