--- a/third/templates/third/update.html
+++ b/third/templates/third/update.html
@@ -8,7 +8,7 @@
         <table>
             {{ form.as_table }}
         </table>
-        <button type="submit">등록</button>
+        <button type="submit">수정완료</button>
     </form>
 </div>
 {% endblock %}
